--- a/train.html
+++ b/train.html
@@ -1,94 +1,102 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Train Activity</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Train Activity</title>
 
-    <!-- jQuery -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <!-- jQuery -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
-    <!-- Bootstrap CDN-->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+  <!-- Bootstrap CDN-->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 
-    <!-- Firebase Reference -->
-    <script src="https://www.gstatic.com/firebasejs/5.1.0/firebase.js"></script>
+  <!-- Firebase Reference -->
+  <script src="https://www.gstatic.com/firebasejs/5.1.0/firebase.js"></script>
 
-    <link rel="stylesheet" type="text/css" href="train.css">
+  <link rel="stylesheet" type="text/css" href="train.css">
 
 
 </head>
+
 <body>
-    <div class="header">
-        <h1>Any Time is Train Time</h1>
-        <h3>Choo Choo. Chee Chee.</h3>
-    </div>
+  <div class="header">
+    <h1>Any Time is Train Time</h1>
+    <h3>Choo Choo. Chee Chee.</h3>
+  </div>
 
-    <table class="table">
-            <div class="row">
-                    <div class="col-lg-12">
-                      <div class="card card-default">
-                        <div class="card-heading">
-                          <h3 class="card-title">Train Schedule</h3>
-                        </div>
-        <thead class="thead-light">
-          <tr>
-            <th scope="col">Train Name</th>
-            <th scope="col">Destination</th>
-            <th scope="col">Frequency (min)</th>
-            <th scope="col">Next Arrival</th>
-            <th scope="col">Minutes Away</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <th scope="row">1</th>
-            <td>Mark</td>
-            <td>Otto</td>
-            <td>@mdo</td>
-          </tr>
-          <tr>
-            <th scope="row">2</th>
-            <td>Jacob</td>
-            <td>Thornton</td>
-            <td>@fat</td>
-          </tr>
-          <tr>
-            <th scope="row">3</th>
-            <td>Larry</td>
-            <td>the Bird</td>
-            <td>@twitter</td>
-          </tr>
-        </tbody>
-      </table>
+  <table class="table">
+    <div class="row">
+      <div class="col-lg-12">
+        <div class="card card-default">
+          <div class="card-heading">
+            <h3 class="card-title">Train Schedule</h3>
+          </div>
+          <thead class="thead-light">
+            <tr>
+              <th scope="col">Train Name</th>
+              <th scope="col">Destination</th>
+              <th scope="col">Frequency (min)</th>
+              <th scope="col">Next Arrival</th>
+              <th scope="col">Minutes Away</th>
+            </tr>
+          </thead>
+          <tbody>
+            <!-- <tr>
+              <th scope="row">1</th>
+              <td>___</td>
+              <td>___</td>
+              <td>___</td>
+            </tr>
+            <tr>
+              <th scope="row">2</th>
+              <td>Jacob</td>
+              <td>Thornton</td>
+              <td>@fat</td>
+            </tr>
+            <tr>
+              <th scope="row">3</th>
+              <td>Larry</td>
+              <td>the Bird</td>
+              <td>@twitter</td>
+            </tr> -->
+          </tbody>
+  </table>
 
-      <div class="row">
-        <div class="col-lg-12">
-          <div class="card card-default">
-            <div class="card-heading">
-              <h3 class="card-title">Add Train</h3>
+  <div class="row">
+    <div class="col-lg-12">
+      <div class="card card-default">
+        <div class="card-heading">
+          <h3 class="add-train">Add Train</h3>
+        </div>
+        <div class="card-body">
+          <form>
+            <div class="form-group row">
+              <label for="name">Train Name</label>
+              <input class="form-control" id="name" type="text">
             </div>
-            <div class="card-body">
-              <form>
-                <div class="form-group row">
-                    <label for="name">Train Name</label>
-                    <input class="form-control" id="name" type="text">
-                  </div>
-                <div class="form-group row">
-                  <label for="destination">Destination</label>
-                  <input class="form-control" id="role" type="text">
-                </div>
-                <div class="form-group row">
-                    <label for="time">First Train Time (HH:mm - military time)</label>
-                    <input class="form-control" id="date" type="text">
-                  </div>
-                  <div class="form-group row">
-                    <label for="frequency">Frequency (min)</label>
-                    <input class="form-control" id="rate" type="text">
-                  </div>
-                <button class="btn btn-primary" id="submit-bid" type="submit">Submit</button>
-              </form>
+            <div class="form-group row">
+              <label for="destination">Destination</label>
+              <input class="form-control" id="destination" type="text">
+            </div>
+            <div class="form-group row">
+              <label for="time">First Train Time (HH:mm - military time)</label>
+              <input class="form-control" id="time" type="text">
+            </div>
+            <div class="form-group row">
+              <label for="frequency">Frequency (min)</label>
+              <input class="form-control" id="frequency" type="text">
+            </div>
+            <button class="btn btn-primary" id="form-submit" type="submit">Submit</button>
+          </form>
+        </div>
+      </div>
+    </div>
+    <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
+    <script src="train.js"></script>
 </body>
-</html> 
+
+</html>
